...
*/
-->

<resources>

    <!--    // common-->
    <string name="button_title_ok">"OK"</string>
    <string name="button_title_cancel">"Cancel"</string>
    <string name="button_title_back">"Back"</string>
    <string name="label_placeholder_fileName">"File Name - Required"</string>
    <string name="label_placeholder_password">"Password - Required"</string>
    <!--    // contacts details-->
    <string name="contact_delete_title">"Delete Connection"</string>
    <string name="contact_delete_revoke">"Revoke"</string>
    <string name="contact_section_title1">"SHARED HEALTH PASSES"</string>
    <string name="contact_section_title2">"CONTACT INFORMATION"</string>
    <string name="contact_section_title3">"Registration"</string>
...
    <string name="title_terms_and_conditions">"Terms and Conditions"</string>
    <string name="title_third_party_notices">"Third Party Notices"</string>
    <string name="title_add">"Add"</string>
    <string name="title_agree">"Agree"</string>
    <string name="title_disagree">"Disagree"</string>
    <string name="title_backup_file">"Backup file"</string>
    <string name="title_create">"Create"</string>
    <string name="title_import_file">"Import file"</string>
    <string name="title_import">"Import"</string>
    <string name="try_again">"An error occurred. Please try again."</string>
    <string name="privacy_policy">"Privacy Policy"</string>
    <string name="details">"Details"</string>
    <string name="view_source">"View source"</string>
    <string name="delete_credential">"Delete card"</string>
    <string name="password_empty_message">"You must enter a password. Tap your password now."</string>
    <string name="payload_empty_message">"You cannot back up your Wallet because it does not contain any cards or passes."</string>
    <string name="incorrect_password_import_message">"The password you entered is not correct. Use a password that matches the password for the imported backup data."</string>
    <string name="credentials_imported_success">"Cards, passes imported"</string>
    <string name="credentials_imported_failed">"Import of cards, passes unsuccessful"</string>
    <string name="erase_credentials_title">"Delete all my cards, passes"</string>
    <string name="erase_credentials_message">"Are you sure you want to delete your cards and passes?"</string>
...
    <string name="phone">"Telephone"</string>
    <string name="dialog_delete_connection_msg">"Do you want to delete this connection?"</string>
    <string name="qr_syntax_invalid">"The card or pass you scanned could not be detected."</string>
    <string name="qr_syntax_invalid_title">"Card, pass not detected"</string>
    <string name="no_credentials_to_download">"No cards, passes to download"</string>
    <string name="no_contact_for_credentials">"No contact specified to download this card, pass"</string>
    <string name="settings_title">"Settings"</string>
    <string name="encryption_errors">"Data encryption was not successful. Please try again."</string>
    <string name="error_in_response">"An error occurred in the response"</string>
    <string name="connection_timedout">"Connection timeout"</string>
    <string name="no_internet">"No network detected"</string>
    <string name="couldnt_reach_server">"Cannot connect with the server"</string>
    <string name="new_connection">"New connection"</string>
...
