...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/create_backup_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:minHeight="@dimen/minAccessibilityHeight"
                    android:gravity="start|center_vertical"
                    android:text="@string/profile_create_backup_title"
...
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:background="@color/formFieldLines"
                    app:layout_constraintTop_toBottomOf="@id/button_reset_cache" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/import_backup_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/minAccessibilityHeight"
                    android:background="@android:color/transparent"
                    android:gravity="start|center_vertical"
                    android:text="@string/profile_create_import_title"
...
